--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,7 @@
         android:name=".MyApplication"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/Theme.BSecure">
+        android:theme="@style/Theme.BSecureSplashScreen">
 
         <activity android:name=".MainActivity"
             android:exported="true">
